fixed 'services' gaps 4 mobiles. undone

--- a/styles/styles4mobiles.css
+++ b/styles/styles4mobiles.css
@@ -7,7 +7,7 @@
   .contacts {
     margin: 0 auto 80px;
     width: 100%;
-    max-width: 375px;
+    max-width: 370px;
   }
 
   .intro h1 {
@@ -112,9 +112,16 @@
   }
 
   .services h2 {
+    padding-left: 3px;
     margin-bottom: 20px;
     font-size: 14px;
     line-height: 19px;
+  }
+  .services__list {
+    margin-bottom: 0;
+    display: block;
+    row-gap: 0;
+    column-gap: 0;
   }
 
   .service__item {
@@ -124,14 +131,13 @@
   .service__image,
   .service__image_last {
     margin-bottom: 10px;
-    max-width: 350px;
     width: 100%;
-    height: 240px;
+    max-height: 240px;
     object-fit: cover;
   }
 
   .services p {
-    padding-left: 1.8px;
+    padding-left: 0;
     color: #ffffff;
     font-size: 18px;
     line-height: 25px;
@@ -142,5 +148,12 @@
     left: 24px;
     top: 23px;
     font-size: 14px !important;
+  }
+
+  .orderService {
+    padding: 37px 0;
+    max-width: 928px;
+    font-size: 22px;
+    line-height: 30px;
   }
 }
